@@ -1,12 +1,12 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <!--<script type="text/javascript" src="com.iskitz.ajile.js"></script>-->
 <script>
 var $wnd = parent;
 var $doc = $wnd.document;
 var $moduleName = "%(app_name)s";
 var $pyjs = new Object();
+$pyjs.global_namespace = this;
 $pyjs.__modules__ = {};
 $pyjs.modules_hash = {};
 $pyjs.available_modules = %(available_modules)s;
@@ -31,7 +31,7 @@ $pyjs.__last_exception__ = null;
 /*
  * prepare app system vars
  */
-$pyjs.platform = '%(platform)s';
+$pyjs.platform = '%(platform_name)s';
 $pyjs.appname = '%(app_name)s';
 $pyjs.loadpath = './';
 
@@ -41,14 +41,28 @@ $pyjs.loadpath = './';
 <body onload="if (parent && parent.__pygwt_webModeFrameOnLoad) parent.__pygwt_webModeFrameOnLoad(window, '%(app_name)s');">
 <font face='arial' size='-1'>This script is part of module</font> <code>%(app_name)s</code>
 
+
 <script><!--
 
 /* early app libs */
 
-%(early_app_libs)s
+%(early_static_app_libs)s
+
+/* early static js libs */
+
+%(early_static_js_libs)s
+
+/* static js libs */
+
+%(static_js_libs)s
 
 /* app libs */
-%(app_libs)s
+
+%(static_app_libs)s
+
+/* late static js libs */
+
+%(late_static_js_libs)s
 
 var wait_count = 0;
 
@@ -77,13 +91,46 @@ function app_imported() {
 }
 
 function prepare_app() {
-    app_imported();
-     // TODO: we don't need it actually because of the late import call
+    var startWait = 30000;
+    var diffWait = 10000;
+    var startAt = (new Date()).getTime();
+    var waitUntil = startAt + startWait;
+    // Wait until all (dynamic) modules are loaded, and then call app_imported()
+    var wait_for_loading_modules = function ( proceed_fn, module_list ) {
+        var timeoutperiod = 100;
+        var wait = function ( ) {
+            var notLoaded = [];
+            for (var i in module_list) {
+                if (typeof $pyjs.loaded_modules[module_list[i]] != 'function') {
+                    notLoaded.push(module_list[i]);
+                }
+            }
+            if (notLoaded.length != 0) {
+                var now = new Date();
+                if (now.getTime() >= waitUntil) {
+                    var msg = "Module not loaded yet: " + notLoaded.length
+                    if (notLoaded.length <= 2) {
+                        msg += "\n" + notLoaded.toString();
+                    }
+                    msg += "\n" + "Wait for missing modules?"
+                    var answer = $wnd.confirm(msg);
+                    if (answer == false) {
+                        proceed_fn();
+                        return;
+                    }
+                    waitUntil = (new Date()).getTime() + diffWait;
+                }
+                setTimeout(wait, timeoutperiod);
+            } else {
+                proceed_fn();
+            }
+        };
+        wait();
+    }
+    wait_for_loading_modules(app_imported, %(dynamic_modules)s);
 }
 
 function pygwtOnLoad(onLoadError, name) {
-     prepare_app();
-     return;
     if (onLoadError != null)
         try {
             prepare_app();
@@ -95,9 +142,20 @@ function pygwtOnLoad(onLoadError, name) {
     }
 }
 
+$pyjs.script_onload = function (modname) {
+    $pyjs.loaded_modules[modname] = function () { return null };
+}
+
+$pyjs.script_onreadystate = function (modname) {
+    if (js.readyState == 'complete') {
+        $pyjs.script_onload(modname);
+    }
+}
 --></script>
 
-%(app_body)s
+%(dynamic_app_libs)s
+
+%(dynamic_js_libs)s
 
 </body>
 </html>
