@@ -185,7 +185,6 @@ script tags into the generated cache.html file.
     ...
     --></script>
     <BLANKLINE>
-    <script type="text/javascript" src="_pyjs.js"></script>
     <script type="text/javascript" src="lib/pyjslib.js"></script>
     <script type="text/javascript" src="lib/sys.js"></script>
     <script type="text/javascript" src="lib/mypackage.js"></script>
@@ -236,8 +235,7 @@ Also the libfiles which are generated from multifile option are upated.
     >>> f = file(op)
     >>> print f.read()
     <html>...
-    <script type="text/javascript" src="_pyjs.js"></script>
-    <...pyjslib...js"></script>
+    <script type="text/javascript" src="...pyjslib.js"></script>
     <...mypackage...js"></script>
     <...mypackage.index...js"></script>...
 
