@@ -55,7 +55,10 @@ class BaseLinker(object):
     platform_parents = {}
 
     def __init__(self, top_module, output='output',
-                 debug=False, js_libs=[], js_static_libs=[], platforms=[], path=[],
+                 debug=False, 
+                 js_libs=[], static_js_libs=[], early_static_js_libs=[], late_static_js_libs=[], dynamic_js_libs=[],
+                 early_static_app_libs = [],
+                 platforms=[], path=[],
                  translator_arguments={},
                  compile_inplace=False):
         self.js_path = os.path.abspath(output)
@@ -64,7 +67,11 @@ class BaseLinker(object):
         self.top_module = top_module
         self.output = os.path.abspath(output)
         self.js_libs = list(js_libs)
-        self.js_static_libs = list(js_static_libs)
+        self.static_js_libs = list(static_js_libs)
+        self.early_static_js_libs = list(early_static_js_libs)
+        self.late_static_js_libs = list(late_static_js_libs)
+        self.dynamic_js_libs = list(dynamic_js_libs)
+        self.early_static_app_libs = list(early_static_app_libs)
         self.translator_arguments = translator_arguments
         self.compile_inplace = compile_inplace
         self.top_module_path = None
@@ -158,11 +165,31 @@ class BaseLinker(object):
             else:
                 logging.info('Translating module:%s platform:%s out:%r' % (
                     module_name, platform or '-', out_file))
-                deps = translator.translate([file_path] +  overrides,
+                deps, js_libs = translator.translate([file_path] +  overrides,
                                             out_file,
                                             module_name=module_name,
                                             **self.translator_arguments)
                 self.dependencies[out_file] = deps
+                for path, mode, location in js_libs:
+                    if mode == 'default':
+                        if self.multi_file:
+                            mode = 'dynamic'
+                        else:
+                            mode = 'static'
+                    if mode == 'dynamic':
+                        self.dynamic_js_libs.append(path)
+                    elif mode == 'static':
+                        if location == 'early':
+                            self.early_static_js_libs.append(path)
+                        elif location == 'middle':
+                            self.static_js_libs.append(path)
+                        elif location == 'late':
+                            self.late_static_js_libs.append(path)
+                        else:
+                            raise RuntimeError, "Unknown js lib location: %r" % location
+                    else:
+                        raise RuntimeError, "Unknown js lib mode: %r" % mode
+
                 if '.' in module_name:
                     for i, dep in enumerate(deps):
                         if module_path(dep, path=[dir_name]):
@@ -206,9 +233,6 @@ def add_linker_options(parser):
     parser.add_option("-j", "--include-js", dest="js_includes",
                       action="append", default=[],
                       help="javascripts to load into the same frame as the rest of the script")
-    parser.add_option("--include-static-js", dest="js_static_includes",
-                      action="append", default=[],
-                      help="javascripts to include into the static code")
     parser.add_option("-I", "--library_dir", dest="library_dirs",
                       default=[],
                       action="append", help="additional paths appended to PYJSPATH")
