@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * Added __pyjamas__.jsimport(path, mode, location)
+
  * Added platform overrides system... to pyjd!  MSHTML, hulahop and pywebkitgtk
    can now have their own platform-specific overrides.
 
